--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,9 @@ p {
     .nav-icon {
         display: inline-block;
         margin-right: 8px;
-        font-size: 16px;
+        width: 16px;
+        height: 16px;
+        vertical-align: middle;
     }
 }
 
